cursor-pointer on Reset filters button

--- a/src/_includes/partials/sidebar.njk
+++ b/src/_includes/partials/sidebar.njk
@@ -165,4 +165,4 @@
 
 <br>
 
-<button onclick="resetSidebarFilters()" class="float-left bg-white font-semibold py-2 px-4 border rounded shadow-md text-gray-800 cursor-default text-opacity-75">Reset filters</button>
+<button onclick="resetSidebarFilters()" class="float-left bg-white font-semibold py-2 px-4 border rounded shadow-md text-gray-800 cursor-pointer text-opacity-75">Reset filters</button>
