--- a/src/_includes/layouts/keymapdb_entry.njk
+++ b/src/_includes/layouts/keymapdb_entry.njk
@@ -5,17 +5,17 @@ layout: default
 <article class="max-w-5xl mx-auto">
     <header class="mb-14">
         <h1 class="text-3xl text-center font-bold leading-normal text-gray-900 mt-0 mb-3">{{ title }}</h1>
-        {% if keymap_image %}
+        {% if keymapImage %}
         <div class="mt-10 -mx-7 md:mx-0">
-            <img class="w-full max-w-2xl mx-auto" src="{{ keymap_image | url }}" width="960" height="500" alt="Picture of {{ title }}">
+            <img class="w-full max-w-2xl mx-auto" src="{{ keymapImage | url }}" width="960" height="500" alt="Picture of {{ title }}">
         </div>
         {% endif %}
     </header>
     <div id="content" class="prose text-gray-800 max-w-none">
         <ul>
-        <li>url: <a href={{ keymap_url }}>{{ keymap_url }}</a></li>
-        <li>author: {{ keymap_author }}</li>
-        <li>image: <a href={{ keymap_image }}>{{ keymap_image }}</a></li>
+        <li>url: <a href={{ keymapUrl }}>{{ keymapUrl }}</a></li>
+        <li>author: {{ keymapAuthor }}</li>
+        <li>image: <a href={{ keymapImage }}>{{ keymapImage }}</a></li>
         <li>keyCount: {{ keyCount }}</li>
         <li>firmware: {{ firmware }}</li>
         <li>keyboard: {{ keyboard }}</li>
