Remove the useless input-number from sidebar and  name -> title

--- a/src/_includes/layouts/keymapdb_entry.njk
+++ b/src/_includes/layouts/keymapdb_entry.njk
@@ -22,7 +22,7 @@ layout: default
         <li>stagger: {{ stagger }}</li>
         <li>split: {{ isSplit }}</li>
         <li>languages: {{ languages }}</li>
-        <li>name: {{ title }}</li>
+        <li>title: {{ title }}</li>
         <li>summary: {{ summary }}</li>
         <li>OS: {{ OS }}</li>
         <li>writeup: <a href={{ writeup }}>{{ writeup }}</a></li>
