Add more fields to keymaps metadata

--- a/src/_includes/layouts/keymapdb_entry.njk
+++ b/src/_includes/layouts/keymapdb_entry.njk
@@ -1,5 +1,9 @@
 ---
 layout: default
+# TODO: remove those defaults
+isTapDanceEnabled: false
+isComboEnabled: false
+isAutoShiftEnabled: false
 ---
 
 <article class="max-w-5xl mx-auto">
