--- a/src/_includes/partials/keymaps-metadata.json.njk
+++ b/src/_includes/partials/keymaps-metadata.json.njk
@@ -3,6 +3,7 @@
     {
 
         "url": {{ post.url | url | dump | safe }},
+        "fileSlug": {{ post.fileSlug | url | dump | safe }},
         {% for field in db_fields -%}
         "{{ field }}": {{ post.data[field] | dump | safe }}{% if not loop.last %},{% endif %}
         {% endfor %}
