--- a/src/_includes/macros/post-card.njk
+++ b/src/_includes/macros/post-card.njk
@@ -1,14 +1,38 @@
 {% macro postCard(post) %}
+{% if post.data.isSplit %}
+    {% set splitStatus = "Split" %}
+{% else %}
+    {% set splitStatus = "Non-split" %}
+{% endif %}
+
 <div class="w-full sm:w-1/2 md:w-1/3 self-stretch p-2 mb-2">
     <div class="rounded shadow-md h-full">
         <a href="{{ post.url | url }}">
-            <img class="w-full m-0 rounded-t lazy"  src="{% if post.data.keymapImage %}{{ post.data.keymapImage | url }}{% elif post.data.image %}{{ post.data.image | url }}{% else %}{{ '/assets/img/no-image.svg' | url }}{% endif %}" width="960" height="500" alt="{{ post.data.keymapAuthor }}'s keymap for the {{ post.data.keyboard }}">
+        <img
+        class="w-full m-0 rounded-t lazy"
+        src="{% if post.data.keymapImage %}{{ post.data.keymapImage | url }}{% elif post.data.image %}{{ post.data.image | url }}{% else %}{{ '/assets/img/no-image.svg' | url }}{% endif %}"
+        width="960"
+        height="500"
+        alt="{{ splitStatus }} {{ post.data.stagger }}-staggered {{ post.data.keyboard }} with {{ post.data.baseLayouts | join(" and ") }} legends"
+        title="{{ splitStatus }} {{ post.data.stagger }}-staggered {{ post.data.keyboard }} with {{ post.data.baseLayouts | join(" and ") }} legends">
         </a>
         <div class="px-6 py-5">
             <div class="font-semibold text-lg mb-2">
                 <a class="text-gray-900 hover:text-gray-700" href="{{ post.url | url }}">{{ post.data.title }}</a>
             </div>
-            <p class="text-gray-700 mb-1">{{ post.data.stagger }} stagger, {{ post.data.keyCount }} keys, {% if post.data.isSplit == false %}non-{% endif %}split</p>
+            <table class="my-5 w-full">
+              <tr>
+              <td class="text-gray-700 mb-1 mx-5">{{ post.data.keyCount }} keys</td>
+              <td class="text-gray-700 mb-1 mx-5">{{ post.data.layerCount }} layers</td>
+              </tr>
+              <tr>
+                <td class="text-gray-700 mb-1 mx-5 break-words">{{ post.data.languages | join(", ") }}</td>
+                <td id="OS-table-cell-{{ post.data.data.fileSlug }}" class="text-gray-700 mb-1 break-words">{{ post.data.OS | join(", ") }}</td>
+              </tr>
+            </table>
+            {% if post.data.summary -%}
+                <p>{{ post.data.summary }}</p>
+            {%- endif %}
             <p class="text-gray-800">
                 {% if post.data.description %}
                 {{ post.data.description }}
