--- a/src/_includes/partials/post-grid.njk
+++ b/src/_includes/partials/post-grid.njk
@@ -1,23 +1,5 @@
+{% from "macros/post-card.njk" import postCard %}
 {%- set lazyImage = "data:image/svg+xml,%3Csvg%20xmlns%3D'http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg'%20viewBox%3D'0%200%201%201'%20height%3D'500'%20width%3D'960'%20style%3D'background-color%3Argb(203%2C213%2C224)'%2F%3E" -%}
 {% for post in paged.posts %}
-<div class="w-full sm:w-1/2 md:w-1/3 self-stretch p-2 mb-2">
-    <div class="rounded shadow-md h-full">
-        <a href="{{ post.url | url }}">
-            <img class="w-full m-0 rounded-t lazy"  src="{% if post.data.keymapImage %}{{ post.data.keymapImage | url }}{% elif post.data.image %}{{ post.data.image | url }}{% else %}{{ '/assets/img/no-image.svg' | url }}{% endif %}" width="960" height="500" alt="{{ post.data.keymapAuthor }}'s keymap for the {{ post.data.keyboard }}">
-        </a>
-        <div class="px-6 py-5">
-            <div class="font-semibold text-lg mb-2">
-                <a class="text-gray-900 hover:text-gray-700" href="{{ post.url | url }}">{{ post.data.title }}</a>
-            </div>
-            <p class="text-gray-700 mb-1">{{ post.data.stagger }} stagger, {{ post.data.keyCount }} keys, {% if post.data.isSplit == false %}non-{% endif %}split</p>
-            <p class="text-gray-800">
-                {% if post.data.description %}
-                {{ post.data.description }}
-                {% else %}
-                {{ post.templateContent | striptags | truncate(90, true) }}
-                {% endif %}
-            </p>
-        </div>
-    </div>
-</div>
+    {{ postCard(post) }}
 {% endfor %}
