--- a/src/_includes/macros/post-card.njk
+++ b/src/_includes/macros/post-card.njk
@@ -20,20 +20,17 @@
             <div class="font-semibold text-lg mb-2">
                 <a class="text-gray-900 hover:text-gray-700" href="{{ post.url | url }}">{{ post.data.title }}</a>
             </div>
-            <table class="my-5 w-full">
-              <tr>
-              <td class="text-gray-700 mb-1 mx-5">{{ post.data.keyCount }} keys</td>
-              <td class="text-gray-700 mb-1 mx-5">{{ post.data.layerCount }} layers</td>
-              </tr>
-              <tr>
-                <td class="text-gray-700 mb-1 mx-5 break-words">{{ post.data.languages | join(", ") }}</td>
-                <td id="OS-table-cell-{{ post.data.data.fileSlug }}" class="text-gray-700 mb-1">
+            <div class="my-5 flex flex-wrap justify-between">
+                <p id="keyCount-table-cell-{{ post.data.fileSlug }}"   class="text-gray-700 mb-1">{{ post.data.keyCount }} keys</p>
+                <p id="layerCount-table-cell-{{ post.data.fileSlug }}" class="text-gray-700 mb-1">{{ post.data.layerCount }} layers</p>
+                <div class="flexitems-break"></div>
+                <p id="languages-table-cell-{{ post.data.fileSlug }}"  class="text-gray-700 mb-1 break-words">{{ post.data.languages.join(", ") }}</p>
+                <p id="OS-table-cell-{{ post.data.fileSlug }}"         class="text-gray-700 mb-1 break-words">
                     {% for osName in post.data.OS %}
                         {% include "./../../assets/svg/OS/" + osName + ".svg" %}
                     {%- endfor %}
-                </td>
-              </tr>
-            </table>
+                </p>
+            </div>
             {% if post.data.summary -%}
                 <p>{{ post.data.summary }}</p>
             {%- endif %}
