--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -107,3 +107,11 @@ svg {
     margin-right: 0.125em;
     margin-left: 0.125em;
 }
+
+/* Inserting this collapsed row between two flex items will make 
+ * the flex item that comes after it break to a new row 
+ * Source: https://tobiasahlin.com/blog/flexbox-break-to-new-row/ */
+.flexitems-break {
+    flex-basis: 100%;
+    height: 0;
+}
