--- a/src/_includes/layouts/keymapdb_entry.njk
+++ b/src/_includes/layouts/keymapdb_entry.njk
@@ -4,35 +4,106 @@ layout: default
 isTapDanceEnabled: false
 isComboEnabled: false
 isAutoShiftEnabled: false
+keybindings: []
 ---
+{% from "macros/if-true-Yes-else-No.njk" import booleanToYesNo %}
+{% if isSplit %}
+    {% set splitStatus = "Split" %}
+{% else %}
+    {% set splitStatus = "Non-split" %}
+{% endif %}
 
 <article class="max-w-5xl mx-auto">
     <header class="mb-14">
         <h1 class="text-3xl text-center font-bold leading-normal text-gray-900 mt-0 mb-3">{{ title }}</h1>
+        <h2 class="text-2xl text-center leading-normal text-gray-750 mt-0 mb-3">Author: {{ keymapAuthor }}</h2>
         {% if keymapImage %}
-        <div class="mt-10 -mx-7 md:mx-0">
-            <img class="w-full max-w-2xl mx-auto" src="{{ keymapImage | url }}" width="960" height="500" alt="Picture of {{ title }}">
-        </div>
+            <a href="{{ keymapImage | url }}">
+            <img
+            class="w-full m-0 rounded-t lazy"
+            src="{% if keymapImage %}{{ keymapImage | url }}{% elif image %}{{ image | url }}{% else %}{{ '/assets/img/no-image.svg' | url }}{% endif %}"
+            width="960"
+            height="500"
+            alt="{{ splitStatus }} {{ stagger }}-staggered {{ keyboard }} with {{ baseLayouts | join(" and ") }} legends"
+            title="{{ splitStatus }} {{ stagger }}-staggered {{ keyboard }} with {{ baseLayouts | join(" and ") }} legends">
+            </a>
         {% endif %}
     </header>
     <div id="content" class="prose text-gray-800 max-w-none">
-        <ul>
-        <li>url: <a href={{ keymapUrl }}>{{ keymapUrl }}</a></li>
-        <li>author: {{ keymapAuthor }}</li>
-        <li>image: <a href={{ keymapImage }}>{{ keymapImage }}</a></li>
-        <li>keyCount: {{ keyCount }}</li>
-        <li>firmware: {{ firmware }}</li>
-        <li>keyboard: {{ keyboard }}</li>
-        <li>stagger: {{ stagger }}</li>
-        <li>split: {{ isSplit }}</li>
-        <li>languages: {{ languages }}</li>
-        <li>title: {{ title }}</li>
-        <li>summary: {{ summary }}</li>
-        <li>OS: {{ OS }}</li>
-        <li>writeup: <a href={{ writeup }}>{{ writeup }}</a></li>
-        <li>hasLetterOnThumb: {{ hasLetterOnThumb }}</li>
-        <li>layerCount: {{ layerCount }}</li>
-        <li>hasHomeRowMods: {{ hasHomeRowMods }}</li>
-        </ul>
+        <table>
+            <th class="font-bold">Keyboard</th>
+            <tr>
+                <td>Keyboard Name</td>
+                <td>{{ keyboard }}</td>
+            </tr>
+            <tr>
+                <td>Stagger</td>
+                <td>{{ stagger | title }}</td>
+            </tr>
+            <tr>
+                <td>Key Count</td>
+                <td>{{ keyCount }}</td>
+            </tr>
+            <tr>
+                <td>Split</td>
+                <td>{{ booleanToYesNo(isSplit) }}</td>
+            </tr>
+            <tr>
+                <td>Firmware</td>
+                <td>{{ firmware }}</td>
+            </tr>
+            <th class="font-bold small-caps">Keymap</th>
+            <tr>
+                <td>Base Layout(s)</td>
+                <td>{{ baseLayouts | join(", ") }}</td>
+            </tr>
+            <tr>
+                <td>Language(s)</td>
+                <td>{{ languages | join(", ") }}</td>
+            </tr>
+            <tr>
+                <td>Letter(s) on thumb</td>
+                <td>{{ booleanToYesNo(hasLetterOnThumb) }}</td>
+            </tr>
+            <tr>
+                <td>Layer Count</td>
+                <td>{{ layerCount }}</td>
+            </tr>
+            <th class="font-bold">Firmware Features</th>
+            <tr>
+                <td>Home Row Mods</td>
+                <td>{{ booleanToYesNo(hasHomeRowMods) }}</td>
+            </tr>
+            <tr>
+                <td>Combos</td>
+                <td>{{ booleanToYesNo(isComboEnabled) }}</td>
+            </tr>
+            <tr>
+                <td>Tap Dance</td>
+                <td>{{ booleanToYesNo(isTapDanceEnabled) }}</td>
+            </tr>
+            <tr>
+                <td>Auto Shift</td>
+                <td>{{ booleanToYesNo(isAutoShiftEnabled) }}</td>
+            </tr>
+            <th class="font-bold">Use Case</th>
+            <tr>
+                <td>OS</td>
+                <td>{{ OS | join(", ") }}</td>
+            </tr>
+            <tr>
+                <td>Keybindings</td>
+                <td>{{ keybindings | join(", ") }}</td>
+            </tr>
+            <th class="font-bold">Links</th>
+            <tr>
+                <td>Keymap Folder</td>
+                <td><a href="{{ keymapUrl }}">{{ keymapUrl }}</a></td>
+            </tr>
+            <tr>
+                <td>Write-Up</td>
+                <td><a href="{{ writeup }}">{{ writeup }}</a></td>
+            </tr>
+        </table>
     </div>
 </article>
