--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -115,3 +115,11 @@ svg {
     flex-basis: 100%;
     height: 0;
 }
+
+tbody tr:nth-child(odd) {
+    background-color: #fafafa;
+}
+
+tbody th {
+    background-color: #f1f1f1;
+}
