Hide sidebar if screen too small

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -123,3 +123,9 @@ tbody tr:nth-child(odd) {
 tbody th {
     background-color: #f1f1f1;
 }
+
+@media (max-width: 768px) {
+    #sidebar {
+        display: none;
+    }
+}
