--- a/src/_includes/layouts/keymapdb_entry.njk
+++ b/src/_includes/layouts/keymapdb_entry.njk
@@ -36,7 +36,7 @@ keybindings: []
         {% if summary %}
             <p>{{ summary }}</p>
         {% endif %}
-        <table>
+        <table class="break-normal">
             <th class="text-xl font-bold">Keyboard</th>
             <th></th>
             <tr>
