Break-word on long links

--- a/src/_includes/layouts/keymapdb_entry.njk
+++ b/src/_includes/layouts/keymapdb_entry.njk
@@ -36,7 +36,7 @@ keybindings: []
         {% if summary %}
             <p>{{ summary }}</p>
         {% endif %}
-        <table class="break-normal">
+        <table>
             <th class="text-xl font-bold">Keyboard</th>
             <th></th>
             <tr>
@@ -109,7 +109,7 @@ keybindings: []
                     <td>{{ showCategoricalArray(keybindings) }}</td>
                 </tr>
             </tbody>
-            <tbody>
+            <tbody style="word-break:break-word">
                 <th class="text-xl font-bold">Links</th>
                 <th></th>
                 <tr>
