--- a/src/index.njk
+++ b/src/index.njk
@@ -8,7 +8,7 @@ permalink: "{% if paged.number > 1 %}page/{{ paged.number }}/{% endif %}index.ht
 ---
 
 <div class="flex">
-    <aside id="sidebar" class="top-0 h-min mr-45 w-300">
+    <aside id="sidebar">
         {% include "partials/sidebar.njk" %}
     </aside>
     <div class="flex-col">
