--- a/src/misc/bundle-extras.js.njk
+++ b/src/misc/bundle-extras.js.njk
@@ -3,6 +3,7 @@ permalink: "/assets/js/bundle-extras.js"
 ---
 {% set js %}
 {% include "../assets/js/filter_keymaps.js" %}
+{% include "../assets/js/search.js" %}
 {% include "../assets/js/nouislider.js" %}
 {% include "../assets/js/dualSlidersConf.js" %}
 {% include "../assets/js/sidebarFilters.js" %}
