Add tailwind class "prose" to about page

--- a/src/about.njk
+++ b/src/about.njk
@@ -9,14 +9,14 @@ title: About KeymapDB
         <img class="w-32 h-32 md:w-40 md:h-40 rounded-full" src="{{ author.avatar | url }}" width="128" height="128" alt="Author avatar">
     </a>
     {% endif %}
-    <article class="max-w-5xl mx-auto text-justify mt-8">
+    <article class="max-w-5xl mx-auto text-justify mt-8 prose">
         <p>
             KeymapDB (“Keymap Database”) is a public and open-source online database for keymaps of programmable keyboards, with a focus on QMK ergonomic keyboards. Here, you'll find a curated list of keymaps to take inspiration from, with a slew of filters you can use to find the user-submitted keymaps that will interest you.
         </p>
         <br>
         <p>
             KeymapDB is NOT:
-            <ul class="list-disc ml-8">
+            <ul>
                 <li>A collection of alpha keyboard layouts (Colemak, Dvorak, AZERTY, BEAKL, …). 
                     Better luck in the “<a href="https://www.keyboard-design.com/best-layouts.html" class="font-medium">Keyboard Design Gallery</a>”.</li>
                 <li>A collection of mechanical keyboards. Visit <a href="https://mechdb.net/keyboards/" class="font-medium">MechDB</a> if that's what you want.</li>
