--- a/src/_includes/macros/post-card.njk
+++ b/src/_includes/macros/post-card.njk
@@ -5,7 +5,7 @@
     {% set splitStatus = "Non-split" %}
 {% endif %}
 
-<div class="w-full sm:w-1/2 md:w-1/3 self-stretch p-2 mb-2">
+<div class="postcard">
     <div class="rounded shadow-md h-full">
         <a href="{{ post.url | url }}">
         <img
