--- a/src/_includes/layouts/main_screen.njk
+++ b/src/_includes/layouts/main_screen.njk
@@ -28,7 +28,7 @@
     <meta name="title" content="{{ metaTitle }}">
     <meta name="description" content="{{ metaDesc }}">
     <meta name="keywords" content="{{ metaKeywords }}">
-    <meta name="author" content="{{ author.name }}">
+    <meta name="author" content="{{ maintainer.name }}">
     <meta name="robots" content="index, follow">
     <link rel="canonical" href="{{ site.url | url }}{{ page.url }}">
     <link rel="shortcut icon" type="image/png" href="{{ '/assets/img/favicon.png' | url }}">
