--- a/src/about.njk
+++ b/src/about.njk
@@ -4,9 +4,9 @@ title: About KeymapDB
 ---
 
 <div class="flex flex-col items-center text-lg">
-    {% if author.avatar %}
-    <a href="{{ author.homepage | url }}" target="_blank" rel="noopener">
-        <img class="w-32 h-32 md:w-40 md:h-40 rounded-full" src="{{ author.avatar | url }}" width="128" height="128" alt="Author avatar">
+    {% if maintainer.avatar %}
+    <a href="{{ maintainer.homepage | url }}" target="_blank" rel="noopener">
+        <img class="w-32 h-32 md:w-40 md:h-40 rounded-full" src="{{ maintainer.avatar | url }}" width="128" height="128" alt="Maintainer avatar">
     </a>
     {% endif %}
     <article class="max-w-5xl mx-auto text-justify mt-8 prose">
