--- a/src/_includes/layouts/keymapdb_entry.njk
+++ b/src/_includes/layouts/keymapdb_entry.njk
@@ -20,7 +20,7 @@ keybindings: []
 <article class="max-w-5xl mx-auto">
     <header class="mb-14">
         <h1 class="text-3xl text-center font-bold leading-normal text-gray-900 mt-0 mb-3">{{ title }}</h1>
-        <h2 class="text-2xl text-center leading-normal text-gray-750 mt-0 mb-3">Author: {{ keymapAuthor }}</h2>
+        <h2 class="text-2xl text-center leading-normal text-gray-750 mt-0 mb-3">Author: {{ author }}</h2>
         {% if keymapImage %}
             <a href="{{ keymapImage | url }}">
             <img
