Add info about km metadata API in about page

--- a/src/about.njk
+++ b/src/about.njk
@@ -22,5 +22,10 @@ title: About KeymapDB
                 <li>A collection of mechanical keyboards. Visit <a href="https://mechdb.net/keyboards/" class="font-medium">MechDB</a> if that's what you want.</li>
             </ul>
         </p>
+
+        <p>
+        Do you wish to programmatically access the information of the database? This is possible by querying
+        <a href="{{ '/keymaps-metadata.json' | url }}" download>keymapdb.com/keymaps-metadata.json</a>.
+        </p>
     </article>
 </div>
