Replace inline CSS styles by tailwind classes

--- a/src/_includes/layouts/keymapdb_entry.njk
+++ b/src/_includes/layouts/keymapdb_entry.njk
@@ -105,7 +105,7 @@ keybindings: []
                     <td>{{ showCategoricalArray(keybindings) }}</td>
                 </tr>
             </tbody>
-            <tbody style="word-break:break-word">
+            <tbody class="break-words">
                 <th colspan="2" class="text-xl font-bold">Links</th>
                 <tr>
                     <td>Keymap Folder</td>
