--- a/src/about.njk
+++ b/src/about.njk
@@ -5,7 +5,7 @@ title: About KeymapDB
 
 <div class="flex flex-col items-center text-lg">
     {% if maintainer.avatar %}
-    <a href="{{ maintainer.homepage | url }}" target="_blank" rel="noopener">
+    <a href="{{ maintainer.homepage | url }}" target="_blank" rel="noopener noreferrer">
         <img class="w-32 h-32 md:w-40 md:h-40 rounded-full" src="{{ maintainer.avatar | url }}" width="128" height="128" alt="Maintainer avatar">
     </a>
     {% endif %}
