Make postcard style more Dark Reader friendly

--- a/src/_includes/macros/post-card.njk
+++ b/src/_includes/macros/post-card.njk
@@ -6,7 +6,7 @@
 {% endif %}
 
 <div class="postcard">
-    <div class="rounded shadow-md h-full">
+    <div class="rounded shadow-lg h-full bg-gray-50 hover:shadow-xl">
         <a href="{{ post.url | url }}">
         <img
         class="w-full m-0 rounded-t lazy"
