--- a/src/_includes/layouts/main_screen.njk
+++ b/src/_includes/layouts/main_screen.njk
@@ -40,6 +40,7 @@
     {#<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap">#}
     <link rel="stylesheet" href="{{ '/assets/css/nouislider.css' | url }}">
     <link rel="stylesheet" href="{{ '/assets/css/main.css' | url }}">
+    <link rel="stylesheet" href="{{ '/assets/css/extras.css' | url }}">
 </head>	
 
 <body class="flex flex-col h-screen bg-white text-gray-800 break-words">
