--- a/src/_includes/partials/sidebar.njk
+++ b/src/_includes/partials/sidebar.njk
@@ -143,6 +143,10 @@
 
 <br>
 
+{{ YesNo("Rotary Encoder(s)", "hasRotaryEncoder") }}
+
+<br>
+
 <fieldset>
     <legend>Layer Count</legend>
     {# Dummy input used to simply fill in the blank for NoScript users #}
