Refactor button style

--- a/src/_includes/partials/sidebar.njk
+++ b/src/_includes/partials/sidebar.njk
@@ -172,4 +172,4 @@
 <br>
 
 {# See https://webhint.io/docs/user-guide/hints/hint-button-type/ for the merits of adding `type="button"` to a <button> #}
-<button type="button" onclick="resetSidebarFilters()" class="float-left bg-white font-semibold py-2 px-4 border rounded shadow-md text-gray-800 cursor-pointer text-opacity-75">Reset filters</button>
+<button type="button" onclick="resetSidebarFilters()" class="button">Reset filters</button>
