--- a/src/_includes/partials/paginator.njk
+++ b/src/_includes/partials/paginator.njk
@@ -1,4 +1,21 @@
-<div class="mt-3 flow-root">
-<a href="{% if not paged.first %}{{ pagination.href.previous | url }}{% else %}javascript:void(0){% endif %}" id="previous-button" class="float-left bg-white font-semibold py-2 px-4 border rounded shadow-md text-gray-800 {% if not paged.first %}cursor-pointer hover:bg-gray-100{% else %}cursor-default text-opacity-75{% endif %}">Previous</a>
-    <a href="{% if not paged.last %}{{ pagination.href.next | url }}{% else %}javascript:void(0){% endif %}" id="next-button" class="float-right bg-white font-semibold py-2 px-4 border rounded shadow-md text-gray-800 {% if not paged.last %}cursor-pointer hover:bg-gray-100{% else %}cursor-default text-opacity-75{% endif %}">Next</a>
+<div class="mt-9 flow-root">
+<a
+ id="previous-button"
+ {% if not paged.first %}
+     href="{{ pagination.href.previous | url }}"
+ {% else %}
+     href="javascript:void(0)"
+     disabled
+ {% endif %}
+ class="float-left button">Previous</a>
+
+<a
+ id="next-button"
+ {% if not paged.last %}
+     href="{{ pagination.href.next | url }}"
+ {% else %}
+     href="javascript:void(0)"
+     disabled
+ {% endif %}
+     class="float-right button">Next</a>
 </div>
