Go to home page when hitting enter in searchbox

--- a/src/_includes/partials/header.njk
+++ b/src/_includes/partials/header.njk
@@ -10,7 +10,7 @@
             <a href="{{ item.url | url }}" {% if item.newTab %}target="_blank" rel="noopener noreferrer" {% endif %}class="block mt-4 md:inline-block md:mt-0 font-medium text-gray-700 hover:text-teal-600 text-base mr-4">{{ item.label }}</a>
             {% endfor %}
         </nav>
-        <form id="search" action="{{ '/search' | url }}" class="order-last sm:order-none flex-grow items-center justify-end hidden sm:block mt-6 sm:mt-0">
+        <form id="search" action="{{ '/' | url }}" class="order-last sm:order-none flex-grow items-center justify-end hidden sm:block mt-6 sm:mt-0">
             <label class="visually-hidden" for="header-searchbox">Search here ...</label>
             <input type="text" name="search" id="header-searchbox" placeholder="Search here ..." class="w-full sm:max-w-xs bg-gray-200 border border-transparent float-right focus:bg-white focus:border-gray-300 focus:outline-none h-8 p-4 placeholder-gray-500 rounded text-gray-700 text-sm">
         </form>
