Turn "firmware (categorical)" into "firmwares (array[categorical])"

--- a/src/_includes/layouts/keymapdb_entry.njk
+++ b/src/_includes/layouts/keymapdb_entry.njk
@@ -60,8 +60,8 @@ keybindings: []
                 <td>{{ booleanToYesNo(hasRotaryEncoder) }}</td>
             </tr>
             <tr>
-                <td>Firmware</td>
-                <td>{{ firmware }}</td>
+                <td>Firmware(s)</td>
+                <td>{{ showCategoricalArray(firmwares, "N/A") }}</td>
             </tr>
             <th colspan="2" class="text-xl font-bold">Keymap</th>
             <tr>
