--- a/src/_includes/layouts/default.njk
+++ b/src/_includes/layouts/default.njk
@@ -31,7 +31,7 @@
     <meta name="author" content="{{ maintainer.name }}">
     <meta name="robots" content="index, follow">
     <link rel="canonical" href="{{ site.url | url }}{{ page.url }}">
-    <link rel="shortcut icon" type="image/png" href="{{ '/assets/img/favicon.png' | url }}">
+    <link rel="shortcut icon" type="image/png" href="{{ site.logo }}">
     <link rel="apple-touch-icon" href="{{ '/assets/img/apple-touch-icon.png' | url }}">
     {#<link rel="dns-prefetch" href="https://fonts.googleapis.com">#}
     {#<link rel="preconnect" href="https://fonts.googleapis.com">#}
