Add link to how to submit keymap in about page

--- a/src/about.njk
+++ b/src/about.njk
@@ -11,7 +11,6 @@ title: About KeymapDB
         <p>
             KeymapDB (“Keymap Database”) is a public and open-source online database for keymaps of programmable keyboards, with a focus on QMK ergonomic keyboards. Here, you'll find a curated list of keymaps to take inspiration from, with a slew of filters you can use to find the user-submitted keymaps that will interest you.
         </p>
-        <br>
         <p>
             KeymapDB is NOT:
             <ul>
@@ -24,6 +23,9 @@ title: About KeymapDB
         <p>
         Do you wish to programmatically access the information of the database? This is possible by querying
         <a href="{{ '/keymaps-metadata.json' | url }}" download>keymapdb.com/keymaps-metadata.json</a>.
+        </p>
+        <p>
+        Want to add your own keymap to the site? Follow the instructions outlined in “<a href="https://github.com/precondition/keymapdb/blob/main/how_to_submit_a_keymap.md">How to submit a keymap</a>”.
         </p>
     </article>
 </div>
