--- a/src/index.njk
+++ b/src/index.njk
@@ -1,5 +1,6 @@
 ---
-layout: layouts/main_screen
+layout: layouts/default
+isMainScreen: true
 pagination:
     data: collections.pagedPosts
     size: 1
