--- a/src/misc/bundle-extras.js.njk
+++ b/src/misc/bundle-extras.js.njk
@@ -2,6 +2,7 @@
 permalink: "/assets/js/bundle-extras.js"
 ---
 {% set js %}
+{% include "../assets/js/card.js" %}
 {% include "../assets/js/filter_keymaps.js" %}
 {% include "../assets/js/search.js" %}
 {% include "../assets/js/nouislider.js" %}
